@@ -1,3 +1,8 @@
+2014-02-19 arne
+
+	* fix CDrawContext::restoreGlobalState on Direct2D
+	* rewrite CDrawContextState to use the stack instead of the heap to store them
+
 2014-02-05 arne
 
 	* add IViewListener interface/adapter
